--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: antiquewhite;
   background-color: #242424;
+}
+
+body {
+  display: grid;
+  place-items: center;
 }
