--- a/src/pages/Layout/layout.css
+++ b/src/pages/Layout/layout.css
@@ -1,7 +1,18 @@
+header {
+    display: grid;
+    place-items: center;
+}
+
 main{
 display: grid;
 place-items: center;
-padding: 2rem 0;
+padding: 1rem 0;
 width: auto;
 height: auto;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
